--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Digital Tree
-description:      The place to share ~
+description:      ~ the place to share ~
 url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
 signoff:          weet # Your name.
